Initial full-stack Circl application
